# LArPandora

./: CMakeLists.txt  CMakePresets.json  README.md
larpandora/LArPandoraAnalysis/: CMakeLists.txt  ConsolidatedPFParticleAnalysisTemplate_module.cc  PFParticleAnalysis_module.cc  PFParticleCosmicAna_module.cc  PFParticleHitDumper_module.cc  PFParticleMonitoring_module.cc  PFParticleTrackAna_module.cc  PFParticleValidation_module.cc
larpandora/LArPandoraEventBuilding/: CMakeLists.txt  CollectionSplitting_module.cc  LArPandoraEvent.cxx  LArPandoraEvent.h  LArPandoraEventDump_module.cc  LArPandoraExternalEventBuilding_module.cc  LArPandoraSliceIdHelper.cxx  LArPandoraSliceIdHelper.h  LArPandoraTrackCreation_module.cc  SimpleNeutrinoId_tool.cc  Slice.h  SliceIdBaseTool.h
larpandora/LArPandoraEventBuilding/LArPandoraShower/: CMakeLists.txt  LArPandoraModularShowerCreation_module.cc  LArPandoraShowerCreation_module.cc
larpandora/LArPandoraEventBuilding/LArPandoraShower/Algs/: CMakeLists.txt  LArPandoraShowerAlg.cxx  LArPandoraShowerAlg.h  LArPandoraShowerCheatingAlg.cxx  LArPandoraShowerCheatingAlg.h  ShowerElementHolder.hh  ShowerProducedPtrsHolder.hh
larpandora/LArPandoraEventBuilding/LArPandoraShower/Tools/: CMakeLists.txt  IShowerTool.h  Shower2DLinearRegressionTrackHitFinder_tool.cc  Shower3DCylinderTrackHitFinder_tool.cc  ShowerBayesianTrucatingdEdx_tool.cc  ShowerDirectionTopologyDecision_tool.cc  ShowerExampleTool_tool.cc  ShowerIncrementalTrackHitFinder_tool.cc  ShowerLengthPercentile_tool.cc  ShowerLinearEnergy_tool.cc  ShowerNumElectronsEnergy_tool.cc  ShowerPCADirection_tool.cc  ShowerPCAEigenvalueLength_tool.cc  ShowerPCAPropergationStartPosition_tool.cc  ShowerPFPVertexStartPosition_tool.cc  ShowerPandoraSlidingFitTrackFinder_tool.cc  ShowerSkeletonTool_tool.cc  ShowerTrackColinearTrajPointDirection_tool.cc  ShowerTrackDirection_tool.cc  ShowerTrackHitDirection_tool.cc  ShowerTrackPCADirection_tool.cc  ShowerTrackSpacePointDirection_tool.cc  ShowerTrackStartPosition_tool.cc  ShowerTrackTrajPointDirection_tool.cc  ShowerTrackTrajToSpacePoint_tool.cc  ShowerTrajPointdEdx_tool.cc  ShowerUnidirectiondEdx_tool.cc  pandorashowertools.fcl
larpandora/LArPandoraEventBuilding/LArPandoraShower/Tools/Cheating/: CMakeLists.txt  ShowerDirectionCheater_tool.cc  ShowerStartPositionCheater_tool.cc  ShowerTrackFinderCheater_tool.cc
larpandora/LArPandoraEventBuilding/SliceIdTools/: CMakeLists.txt  SimpleBeamParticleId_tool.cc  SimpleNeutrinoId_tool.cc
larpandora/LArPandoraInterface/: CMakeLists.txt  ILArPandora.h  LArPandora.cxx  LArPandora.h  LArPandoraDetectorType.cxx  LArPandoraDetectorType.h  LArPandoraGeometry.cxx  LArPandoraGeometry.h  LArPandoraGeometryComponents.h  LArPandoraHelper.cxx  LArPandoraHelper.h  LArPandoraHitCollectionTool.h  LArPandoraHitCollectionToolDefault.h  LArPandoraHitCollectionToolDefault_tool.cc  LArPandoraInput.cxx  LArPandoraInput.h  LArPandoraOutput.cxx  LArPandoraOutput.h  StandardPandora_module.cc
larpandora/LArPandoraInterface/Detectors/: CMakeLists.txt  DUNEFarDetVDThreeView.cxx  DUNEFarDetVDThreeView.h  GetDetectorType.cxx  GetDetectorType.h  ICARUS.h  LArPandoraDetectorType.cxx  LArPandoraDetectorType.h  ProtoDUNEDualPhase.cxx  ProtoDUNEDualPhase.h  VintageLArTPCThreeView.h
larpandora/LArPandoraInterface/detectors/: CMakeLists.txt  DUNEFarDetVDThreeView.h
ups/: product_deps
